@@ -761,6 +761,7 @@ define function, begin
 732,appendsliceextra,2,0,0    # Append to the 'extra' array (slice, value)
 733,lookupnextslice,3,0,0,0   # Next slice with lookup code (lookupcode, current, root)
 734,nextsliceintree,3,0,0,1   # Next slice (current, root, visit children)
+735,windowisfocused,0         # The game's window is the active one
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
 
